--- a/src/stylesheets/button.css
+++ b/src/stylesheets/button.css
@@ -5,7 +5,7 @@
   border-radius: 0;
   border-style: none;
   border-color: var(--gray);
-  box-shadow: inset 0px 0px 0px 1px rgb(195, 195, 195);
+  box-shadow: inset 0 0 0 1px rgb(195, 195, 195);
 }
 
 .calc-btn:hover {
